ajout de la page de Escapades Temporelles

--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -47,23 +47,24 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-1.webp);background-size: cover;"></div>
             <div class="text">
-                <p class="text">L’écriture, puis les nombreuses réécritures du scénario qui ont suivis nous ont permis d’ébaucher un storyboard que nous avons ensuite redessiné sur ordinateur.</p>
+                <p class="text">La première étape était de trouver un concept simple et original. Nous avons eu l’idée de jouer avec les voyages dans le temps. Le jeu consiste en une succession de parcours que le joueur doit franchir en alternant entre le présent et un futur désetrique et insalubre.</p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: contain;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. </p>
+                <p class="text">Inspiré par Portal, le jeu ne comporte aucune cinématique afin de laisser la plus de liberté possible au joueur. Plusieurs page de dialogues ont été rédigées puis enregistrées afin de faire face à toutes les éventualités du joueur. De même, plusieurs affiches ont été judicieusement placées à plusieurs endroits afin de guider le joueur sans briser l’immersion.</p>
             </div>
         </div>
 
+        
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: contain;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-4.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
+                <p class="text">Pitché puis présenté lors de l’édition 2023 des Hauts-de-Seine Digital Games, nous avons remporté prix du meilleur jeu dans la catégorie lycéenne. Les graphismes, le concept et la narration du jeu ont particulièrement été remarqués par le jury. </p>
             </div>
         </div>
 
