ajout de showtime

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>Projets</h2>
 
         <div class="container">
-            <a href="/pages/projects/escapadesTemporelles.html" target="_blank" class="card background-image" id="card-escapades">
+            <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
