--- a/pages/projects.html
+++ b/pages/projects.html
@@ -78,6 +78,14 @@
             </div>
         </div></a>
 
+        <a href="/pages/projects/ebullition.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">Ébullition</p>
+                <p class="text">Création d'un épisode pilote d'une émission culturelle.</p>
+            </div>
+        </div></a>
+
 
         <a class="backToHome" href="/index.html">retour à l'accueil</a>
 
