maj de ébulittion

--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -50,15 +50,15 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);background-size: cover;"></div>
             <div class="text">
-                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité .Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour mieux le comprendre, et l'appréhender dans nos vies.
+                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité. Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour mieux le comprendre, et l'appréhender dans nos vies.
                 </p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);;background-size: contain;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/ebullition-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">En tant que réalisateur, co-auteur et co-monteur de ce premier épisode, nous sommes très fiers du résultat ! 
+                <p class="text">J'ai été réalisateur, co-auteur et co-monteur de ce premier épisode, et je suis très fier du résultat. Le passage du scénario à l'image est toujours le plus compliqué, et malgré un délai de production assez court, nous avons réussi à produire un contenu qui nous plaisait tous.
                 </p>
             </div>
         </div>
