--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,7 +58,7 @@
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">BeFake.</p>
-                <p class="text">Développement d'un réseau social de partage de photos générée par intelligence artificielle.</p>
+                <p class="text">Développement d'un réseau social de partage de photos.</p>
             </div>
         </div></a>
 
@@ -82,7 +82,7 @@
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Ébullition</p>
-                <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
+                <p class="text">Création d'un épisode pilote d'une émission culturelle.</p>
             </div>
         </div></a>
 
