Revert "feature: project description and colored card on hover"
This reverts commit 7e21f150ac48ea6b01e3be8a8f92f0dc7ca0447b.

--- a/index.html
+++ b/index.html
@@ -111,44 +111,25 @@
 
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
-                <div class="infos">
-                    <!-- image du projet(url) & lien vers la page(href) -->
-                    <p class="title">(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
-                    <span>
-                        <p class="competence">photographie</p>
-                    </span>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
-                <div class="infos">
-                    <!-- image du projet(url) & lien vers la page(href) -->
-                    <p class="title">(01) <span>Théories animées</span></p> <!-- Titre du projet -->
-                    <span>
-                        <p class="competence">motion design</p>
-                    </span>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
             </a>
         </div>
+
         <div class="container">
             <a href="/pages/projects/beFake.html" class="card background-image" id="card-befake">
-                <div class="infos">
-                    <!-- image du projet(url) & lien vers la page(href) -->
-                    <p class="title">(03) <span>BeFake.</span></p> <!-- Titre du projet -->
-                    <span>
-                        <p class="competence">application web</p>
-                    </span>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
-                <div class="infos">
-                    <!-- image du projet(url) & lien vers la page(href) -->
-                    <p class="title">(04) <span>Refonte Musba</span></p> <!-- Titre du projet -->
-                    <span>
-                        <p class="competence">site web</p>
-                    </span>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
@@ -161,32 +142,30 @@
         <div class="container">
             <a href="https://www.behance.net/gallery/193965507/Bordeaux" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;">
-                <div class="infos">
-                    <p class="title">(02) <span>Bordeaux</span></p>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(02) <span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="https://www.behance.net/gallery/193833567/Paris-13" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;">
-                <div class="infos">
-                    <p class="title">(01) <span>Paris</span></p>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+
+                <p>(01) <span>Paris</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
             <a href="https://www.behance.net/gallery/193965621/Montagne" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;">
-                <div class="infos">
-                    <p class="title">(03) <span>Montagne</span></p>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+
+                <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
             </a>
-            <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank"
-                class="card background-image"
+            <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;">
-                <div class="infos">
-                    <p class="title">(04) <span>Explorations urbaines</span></p>
-                </div>
+                <!-- image du projet(url) & lien vers la page(href) -->
+
+                <p>(04) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
         </div>
     </section>
@@ -206,25 +185,6 @@
     <footer>
         <p>&copy; Tom WAINBERG, 2024</p> <!-- possibilité de rajouter du contenu textuel -->
     </footer>
-    <script>
-        const infos = document.querySelectorAll(".card");
-        infos.forEach(info => {
-            info.addEventListener("mouseover", () => {
-                let competence = info.querySelector(".competence");
-                if (competence) {
-                    competence.style.backgroundColor = "white";
-                    competence.style.color = "black";
-                }
-            });
-            info.addEventListener("mouseout", () => {
-                let competence = info.querySelector(".competence");
-                if (competence) {
-                    competence.style.backgroundColor = "";
-                    competence.style.color = "";
-                }
-            });
-        });
-    </script>
 </body>
 
 </html>
