fix: feature: project description and colored card on hover

--- a/index.html
+++ b/index.html
@@ -112,24 +112,28 @@
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
+                <p class="span-project">(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
+                <span class="span-competence">vidéo</span>
             </a>
 
             <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
+                <p class="span-project">(01) <span>Théories animées</span></p> <!-- Titre du projet -->
+                <span class="span-competence">motion design</span> <!-- tag du projet -->
             </a>
         </div>
 
         <div class="container">
             <a href="/pages/projects/beFake.html" class="card background-image" id="card-befake">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
+                <p class="span-project">(03) <span>BeFake.</span></p> <!-- Titre du projet -->
+                <span class="span-competence">web app</span> <!-- tag du projet -->
             </a>
 
             <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
+                <p class="span-project">(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
+                <span class="span-competence">site web</span> <!-- tag du projet -->
             </a>
         </div>
 
@@ -161,7 +165,8 @@
 
                 <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
             </a>
-            <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank" class="card background-image"
+            <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank"
+                class="card background-image"
                 style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
@@ -185,6 +190,25 @@
     <footer>
         <p>&copy; Tom WAINBERG, 2024</p> <!-- possibilité de rajouter du contenu textuel -->
     </footer>
+    <script>
+        const infos = document.querySelectorAll(".card");
+        infos.forEach(info => {
+            info.addEventListener("mouseover", () => {
+                let competence = info.querySelector(".span-competence");
+                if (competence) {
+                    competence.style.backgroundColor = "white";
+                    competence.style.color = "black";
+                }
+            });
+            info.addEventListener("mouseout", () => {
+                let competence = info.querySelector(".span-competence");
+                if (competence) {
+                    competence.style.backgroundColor = "";
+                    competence.style.color = "";
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
