--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p class="span-project">(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
-                <span class="span-competence">vidéo</span>
+                <span class="span-competence">écriture</span>
             </a>
 
             <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
@@ -127,13 +127,14 @@
             <a href="/pages/projects/beFake.html" class="card background-image" id="card-befake">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p class="span-project">(03) <span>BeFake.</span></p> <!-- Titre du projet -->
-                <span class="span-competence">web app</span> <!-- tag du projet -->
+                <span class="span-competence">développement web</span> <!-- tag du projet -->
             </a>
 
             <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p class="span-project">(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
-                <span class="span-competence">site web</span> <!-- tag du projet -->
+                <span class="span-competence">développement web</span> <!-- tag du projet -->
+
             </a>
         </div>
 
