maj de la video d'ebullition

--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -66,7 +66,7 @@
 
         <div class="video">
             <p>Ébullition - L'ennui est-il une fatalité ? :</p>
-            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/CFjy0Sy_te8?si=ii_N_kUpzMydq9j3" title="L'Ennui" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/I9My_hI-t4w?si=nkNOg7LEX996ejeU" title="L'Ennui" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
