Mod tous mes projets + maj de ebulliton

--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -75,7 +75,7 @@
 
         <div class="boutons-back">
             <a class="backToHome" href="/index.html">retour à l'accueil</a>
-            <a class="backToHome" href="/pages/projects.html">retour aux projets</a>
+            <a class="backToHome" href="/pages/projects.html">tous mes projets</a>
         </div>
 
     </section>
