--- a/pages/projects.html
+++ b/pages/projects.html
@@ -85,7 +85,7 @@
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Ébullition</p>
-                <p class="text">Création d'un épisode pilote d'une émission culturelle.</p>
+                <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
             </div>
         </div></a>
 
