--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -36,8 +36,7 @@
     <section id="project-page-title">
         <h1><span>(06) </span>Ébullition</h1>
         <p>
-            Notre objectif était de créer du contenu permettant de stimuler la réflexion et l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante dans notre vie quotidienne.
-            
+            Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition, avec comme premier sujet la fatalité (supposée) de l’ennui !            
         </p>
        
         <p>
@@ -50,15 +49,24 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);background-size: cover;"></div>
             <div class="text">
-                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité .Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour mieux le comprendre, et l'appréhender dans nos vies.
+                <p class="text">Notre objectif était de créer du contenu permettant de stimuler la réflexion et l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante dans notre quotidien.
+                </p>
+            </div>
+        </div>
+
+                <div class="project">
+            <div class="background-image" style="background-image: url(/images/projets/ebullition-2.webp);background-size: cover;"></div>
+            <div class="text">
+                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité. Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour le comprendre, et mieux vivre avec.
                 </p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);;background-size: contain;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/ebullition-3.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">En tant que réalisateur, co-auteur et co-monteur de ce premier épisode, nous sommes très fiers du résultat ! 
+                <p class="text">J'ai été réalisateur, co-auteur et co-monteur de ce premier épisode, et je suis très fier du résultat. Le passage du texte à l'image est généralement le plus délicat, et malgré un délai de production assez court, nous avons réussi à produire un contenu qui nous plaisait tous.
+
                 </p>
             </div>
         </div>
@@ -71,7 +79,7 @@
 
         <div class="boutons-back">
             <a class="backToHome" href="/index.html">retour à l'accueil</a>
-            <a class="backToHome" href="/pages/projects.html">retour aux projets</a>
+            <a class="backToHome" href="/pages/projects.html">tous mes projets</a>
         </div>
 
     </section>
