fr et changement portrait
bah voilà

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta name="author" content="Tom Wainberg">
     <meta name="owner" content="Tom Wainberg">
 
-    <meta name="url" content="https://tomwainberg.netlify.app/">
-    <meta name="identifier-URL" content="https://tomwainberg.netlify.app/">
-    <link rel="canonical" href="https://tomwainberg.netlify.app/" />
+    <meta name="url" content="https://tomwainberg.fr">
+    <meta name="identifier-URL" content="https://tomwainberg.fr">
+    <link rel="canonical" href="https://tomwainberg.fr" />
 
     <meta name="subject" content="undefined">
     <meta name="description"
@@ -29,11 +29,11 @@
     <meta property="og:description"
         content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
     <meta property="og:site_name" content="Tom Wainberg" />
-    <meta property="og:url" content="https://tomwainberg.netlify.app/" />
+    <meta property="og:url" content="https://tomwainberg.fr" />
     <meta property="og:locale" content="fr" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://tomwainberg.netlify.app/">
+    <meta property="twitter:url" content="https://tomwainberg.fr">
     <meta name="twitter:title" content="Accueil - Tom Wainberg" />
     <meta name="twitter:description"
         content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
@@ -84,7 +84,7 @@
                 Étudiant de première année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/photoEdgar2LRPSLR.webp" alt="portrait">
+        <img src="images/Photo3.png" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
