changement portrait photo
voilà

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Étudiant de première année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/Photo3.png" alt="portrait">
+        <img src="images/P1002631 - Photoshopped - Copie.webp" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
