--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="images/iconWebsite.jpg" />
+    <link rel="icon" href="images/iconWebsite.png" />
 
     <meta name="robots" content="all">
     <meta name="target" content="all">
@@ -81,7 +81,7 @@
         <div>
             <h1>Tom Wainberg</h1>
             <p>
-                Étudiant de première année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
+                Étudiant de deuxième année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
         <img src="images/20240624-P1002631---Photoshopped2.webp" alt="portrait">
