--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
-    <link rel="icon" href="/images/iconWebsite.jpg" />
+    <link rel="icon" href="/images/iconWebsite.png" />
     <title>Tom Wainberg - BeFake</title>
 </head>
 <body>
