--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="icon" href="/images/iconWebsite.jpg" />
+    <link rel="icon" href="/images/iconWebsite.png" />
     <script src="/js/handleMenu.js" defer></script>
     <title>Tom Wainberg - Ébullition</title>
     <script defer src="/js/iframeResize.js"></script>
