changement textes index

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
 
     <section id="about">
         <div class="particles-js" id="particles-js-about"></div>
-        <h2>Qui suis-je ?</h2>
+        <h2>Je suis ?...</h2>
         <p>
             Photographe à temps perdu, musicien autodidacte et grimpeur en herbe,
             j'aime exprimer ma créativité à travers n'importe quelle forme artistique à ma disposition.
         </p>
         <div>
-            <a class="cta" href="#projects">mes projets</a>
-            <a class="cta" href="#photos">mes photos</a>
+            <a class="cta" href="#projects">découvrir mes projets</a>
+            <a class="cta" href="#photos">observer mes photos</a>
 
         </div>
     </section>
 
     <section id="projects">
         <div class="particles-js" id="particles-js-projects"></div>
-        <h2>Projets</h2>
+        <h2>Quelques projets</h2>
 
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
@@ -142,7 +142,7 @@
     </section>
     <section id="photos">
         <div class="particles-js" id="particles-js-photos"></div>
-        <h2>Photos</h2>
+        <h2>Quelques photos</h2>
 
         <div class="container">
             <a href="https://www.behance.net/gallery/193965507/Bordeaux" target="_blank" class="card background-image"
@@ -182,9 +182,9 @@
         <div class="particles-js" id="particles-js-contact"></div>
         <ul>
             <!-- lien & titre modifiable -->
-            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img
+            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>Mon LinkedIn<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
-            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>CV<img
+            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>Mon joli CV<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
         </ul>
     </section>
