changement portait encore

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Étudiant de deuxième année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/20240624-P1002631---Photoshopped2.webp" alt="portrait">
+        <img src="images/TomFInal.webp" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
@@ -93,7 +93,7 @@
 
     <section id="about">
         <div class="particles-js" id="particles-js-about"></div>
-        <h2>Je suis ?...</h2>
+        <h2>Je suis ?</h2>
         <p>
             Photographe à temps perdu, musicien autodidacte et grimpeur en herbe,
             j'aime exprimer ma créativité à travers n'importe quelle forme artistique à ma disposition.
@@ -107,7 +107,7 @@
 
     <section id="projects">
         <div class="particles-js" id="particles-js-projects"></div>
-        <h2>Quelques projets</h2>
+        <h2>quelques projets</h2>
 
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
@@ -142,7 +142,7 @@
     </section>
     <section id="photos">
         <div class="particles-js" id="particles-js-photos"></div>
-        <h2>Quelques photos</h2>
+        <h2>quelques photos</h2>
 
         <div class="container">
             <a href="https://www.behance.net/gallery/193965507/Bordeaux" target="_blank" class="card background-image"
@@ -182,9 +182,9 @@
         <div class="particles-js" id="particles-js-contact"></div>
         <ul>
             <!-- lien & titre modifiable -->
-            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>Mon LinkedIn<img
+            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>mon LinkedIn<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
-            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>Mon joli CV<img
+            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>mon joli CV<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
         </ul>
     </section>
