quelques majn du texte de l'index + ajout behance

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 
     <section id="about">
         <div class="particles-js" id="particles-js-about"></div>
-        <h2>Je suis ?</h2>
+        <h2>je suis ?...</h2>
         <p>
             Photographe à temps perdu, musicien autodidacte et grimpeur en herbe,
             j'aime exprimer ma créativité à travers n'importe quelle forme artistique à ma disposition.
         </p>
         <div>
-            <a class="cta" href="#projects">découvrir mes projets</a>
-            <a class="cta" href="#photos">observer mes photos</a>
+            <a class="cta" href="#projects">mes projets</a>
+            <a class="cta" href="#photos">mes photos</a>
 
         </div>
     </section>
@@ -138,7 +138,7 @@
             </a>
         </div>
 
-        <a class="cta" href="/pages/projects.html">plus de projets</a>
+        <a class="cta" href="/pages/projects.html">plus de projets...</a>
     </section>
     <section id="photos">
         <div class="particles-js" id="particles-js-photos"></div>
@@ -184,6 +184,8 @@
             <!-- lien & titre modifiable -->
             <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>mon LinkedIn<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
+                        <li><a href="https://www.behance.net/tomwainberg" target="_blank"><span>+</span>mon Behance<img
+                            src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
             <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>mon joli CV<img
                         src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
         </ul>
