Changement méta et description

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <meta name="subject" content="undefined">
     <meta name="description"
-        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+        content="Portfolio d'un créatif." />
 
-    <meta property="og:title" content="Accueil" />
+    <meta property="og:title" content="Test1" />
     <meta property="og:type" content="website" />
     <meta property="og:description"
-        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+        content="Portfolio d'un créatif." />
     <meta property="og:site_name" content="Tom Wainberg" />
     <meta property="og:url" content="https://tomwainberg.fr" />
     <meta property="og:locale" content="fr" />
@@ -36,7 +36,7 @@
     <meta property="twitter:url" content="https://tomwainberg.fr">
     <meta name="twitter:title" content="Accueil - Tom Wainberg" />
     <meta name="twitter:description"
-        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+        content="Portfolio d'un créatif." />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Accueil" />
