changement de truc rien compris mais ok

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://tomwainberg.fr">
-    <meta name="twitter:title" content="Accueil - Tom Wainberg" />
-    <meta name="twitter:description" content="Portfolio d'un créatif." />
+    <meta name="twitter:title" content="Porfolio - Tom Wainberg" />
+    <meta name="twitter:description"
+        content="Portfolio d'un créatif." />
+
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Accueil" />
+    <meta name="apple-mobile-web-app-title" content="Test2" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
