--- a/index.html
+++ b/index.html
@@ -111,28 +111,28 @@
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p class="span-project">(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
-                <span class="span-competence">écriture</span>
+               <!--<p class="span-project">(02) <span>Escapades Temporelles</span></p>  Titre du projet 
+                <span class="span-competence">écriture</span>-->
             </a>
 
             <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
-                <!-- image du projet(url) & lien vers la page(href) -->
-                <p class="span-project">(01) <span>Théories animées</span></p> <!-- Titre du projet -->
-                <span class="span-competence">motion design</span> <!-- tag du projet -->
+                <!-- image du projet(url) & lien vers la page(href) 
+                <p class="span-project">(01) <span>Théories animées</span></p>  Titre du projet 
+                <span class="span-competence">motion design</span>  tag du projet -->
             </a>
         </div>
 
         <div class="container">
             <a href="/pages/projects/beFake.html" class="card background-image" id="card-befake">
-                <!-- image du projet(url) & lien vers la page(href) -->
-                <p class="span-project">(03) <span>BeFake.</span></p> <!-- Titre du projet -->
-                <span class="span-competence">développement web</span> <!-- tag du projet -->
+                <!-- image du projet(url) & lien vers la page(href) 
+                <p class="span-project">(03) <span>BeFake.</span></p>  Titre du projet 
+                <span class="span-competence">développement web</span> tag du projet -->
             </a>
 
             <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
-                <!-- image du projet(url) & lien vers la page(href) -->
-                <p class="span-project">(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
-                <span class="span-competence">développement web</span> <!-- tag du projet -->
+                <!-- image du projet(url) & lien vers la page(href) 
+                <p class="span-project">(04) <span>Refonte MusBa</span></p>  Titre du projet 
+                <span class="span-competence">développement web</span>  tag du projet -->
 
             </a>
         </div>
