Rajout miniature l'ordre

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -89,6 +89,15 @@
             </div>
         </div></a>
 
+        <a href="/pages/projects/ebullition.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/minitiature-lordre.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">L'Ordre</p>
+                <p class="text">Réalisation d'un court-métrage de guerre, avec comme thème "sous-marin".</p>
+            </div>
+        </div></a>
+
+
 
         <a class="backToHome" href="/index.html">retour à l'accueil</a>
 
