MAJ légère page l'ordre

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -89,7 +89,7 @@
             </div>
         </div></a>
 
-        <a href="/pages/projects/ebullition.html"><div class="project">
+        <a href="/pages/projects/lordre.html"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/minitiature-lordre.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">L'Ordre</p>
