--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/images/iconWebsite.png" />
     <script src="/js/handleMenu.js" defer></script>
-    <title>Tom Wainberg - Ébullition</title>
+    <title>Tom Wainberg - L'Ordre</title>
     <script defer src="/js/iframeResize.js"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
         </p>
        
         <p>
-            Tout cela a été réalisé dans un délai de 8 jours, dans le cadre de la formation MMI (mars 2024).
+            Tout cela a été réalisé dans un délai de 8 jours, dans le cadre de la formation MMI (octobre 2024).
         </p>
     </section>
 
@@ -73,8 +73,8 @@
 
 
         <div class="video">
-            <p>Ébullition - L'ennui est-il une fatalité ? :</p>
-            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/I9My_hI-t4w?si=nkNOg7LEX996ejeU" title="L'Ennui" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
+            <p>L'ORDRE - Court-Métrage :</p>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/4Bak-6d3PTU?si=lBMq7seRcOMmuiXB" title="L'Ordre" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
