--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="particles-js" id="particles-js-about"></div>
         <h2>je suis ?...</h2>
         <p>
-            Photographe à temps perdu, musicien autodidacte et grimpeur en herbe,
-            j'aime exprimer ma créativité à travers n'importe quelle forme artistique à ma disposition.
+            Photographe à temps perdu, musicien autodidacte, grimpeur en herbe,
+            et actuellement vidéaste chez l'<a href="https://www.lespritcritique.fr/" target="_blank">Esprit Critique</a>.
         </p>
         <div>
             <a class="cta" href="#projects">mes projets</a>
@@ -129,7 +129,7 @@
                 <span class="span-competence">développement web</span> tag du projet -->
             </a>
 
-            <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
+            <a href="/pages/projects/lordre.html" class="card background-image" id="card-ordre">
                 <!-- image du projet(url) & lien vers la page(href) 
                 <p class="span-project">(04) <span>Refonte MusBa</span></p>  Titre du projet 
                 <span class="span-competence">développement web</span>  tag du projet -->
@@ -173,6 +173,8 @@
                 <p>(04) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
         </div>
+
+        
     </section>
 
 
