Changement Images Ordre Ebullition

--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -47,7 +47,7 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/ordre-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">Notre objectif était de créer du contenu permettant de stimuler la réflexion et l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante dans notre quotidien.
                 </p>
@@ -55,21 +55,13 @@
         </div>
 
                 <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-2.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/ordre-2.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité. Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour le comprendre, et mieux vivre avec.
                 </p>
             </div>
         </div>
-
-        <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-3.webp);;background-size: contain;"></div>
-            <div class="text">
-                <p class="text">J'ai été réalisateur, co-auteur et co-monteur de ce premier épisode, et je suis très fier du résultat. Le passage du texte à l'image est généralement le plus délicat, et malgré un délai de production assez court, nous avons réussi à produire un contenu qui nous plaisait tous.
-
-                </p>
-            </div>
-        </div>
+ 
 
 
         <div class="video">
